# lead-lag-quant

./: AGENTS.md
.planning/: MILESTONES.md  (+4 more)
lead-lag-quant/: .env.example  .gitignore  README.md  main.py  pyproject.toml
lead-lag-quant/api/: main.py  ws.py
lead-lag-quant/api/routes/: analytics.py  backtest.py  pairs.py  signals.py  trading.py
lead-lag-quant/backtest/: engine.py
lead-lag-quant/features/: __init__.py  cross_correlation.py  db.py  lagged_returns.py  pipeline.py  relative_strength.py  residualize.py  volatility.py  zscore.py
lead-lag-quant/frontend/src/: App.tsx
lead-lag-quant/ingestion_massive/: ingestion.py  models.py  polygon_client.py
lead-lag-quant/leadlag_engine/: __init__.py  db.py  detector.py  distribution.py  pipeline.py  regime.py  stability.py
lead-lag-quant/normalization/: bar_normalizer.py  dividend_storer.py  normalizer.py  returns_calc.py  split_adjuster.py  timestamp_utils.py
lead-lag-quant/paper_trading/: __init__.py  analytics.py  db.py  engine.py  market_data.py  models.py  price_poller.py
lead-lag-quant/signals/: __init__.py  generator.py
lead-lag-quant/tests/: conftest.py  test_api_analytics.py  test_api_backtest.py  test_api_pairs.py  test_api_trading.py  test_backtest_engine.py  test_db.py  test_engine_detector.py  test_engine_regime.py  test_engine_stability.py  test_features_pipeline.py  test_features_simple.py  test_features_xcorr.py  test_ingestion.py  test_normalization.py  test_paper_trading.py  test_polygon_client.py  test_returns_calc.py  test_signal_filtering.py  test_signals_generator.py  test_ws.py
lead-lag-quant/ui/: analytics_panel.py  app.py  paper_trading_panel.py  signal_dashboard.py
lead-lag-quant/utils/: background_price_poller.py  config.py  date_helpers.py  db.py  logging.py  pipeline_scheduler.py
(+83 files in other folders)
