[project]
name = "lead-lag-quant"
version = "0.1.0"
description = "Quantitative analytics platform for detecting lead-lag relationships between equities"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pydantic>=2.0",
    "structlog",
    "exchange-calendars",
    "pyrate-limiter",
    "gradio",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]
