[project]
name = "lead-lag-quant"
version = "0.1.0"
description = "Quantitative analytics platform for detecting lead-lag relationships between equities"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pydantic>=2.0",
    "structlog",
    "exchange-calendars",
    "pyrate-limiter",
    "gradio",
    "python-dotenv",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "pandas>=2.1",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
