[project]
name = "lead-lag-quant"
version = "0.1.0"
description = "Quantitative analytics platform for detecting lead-lag relationships between equities"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pydantic>=2.0",
    "structlog",
    "exchange-calendars",
    "pyrate-limiter",
    "python-dotenv",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "pandas>=2.1",
    "numpy>=1.26",
    "pandas-market-calendars>=5.3",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "fastapi",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
